Remove commons-codec and commons-io direct dependencies
  Replace all direct usages of commons-codec and commons-io with Java
  standard library equivalents across the entire codebase:

  - commons-codec Base64/Hex → java.util.Base64 and Integer.toHexString
  - IOUtils.toString/toByteArray/toInputStream/copy → readAllBytes(),
    transferTo(), ByteArrayInputStream, String constructors
  - IOUtils.closeQuietly → null-guarded try/catch
  - FileUtils.deleteDirectory/copyDirectory → Files.walkFileTree()
  - ValidatingObjectInputStream → custom ObjectInputStream.resolveClass()

  Retain commons-io version management in parent POM for transitive
  dependency resolution (commons-vfs2 requires commons-io 2.18.0).

  Fix pre-existing NPE in AbstractODataStreamManager.finalizeBody()
  where getBodyStreamWriter() returns null for InputStream-based
  stream managers.