@@ -25,7 +25,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import org.apache.commons.io.IOUtils;
 import org.sitenetsoft.olinguito.commons.api.data.ContextURL;
 import org.sitenetsoft.olinguito.commons.api.data.DeletedEntity;
 import org.sitenetsoft.olinguito.commons.api.data.DeletedEntity.Reason;
@@ -87,7 +86,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -113,7 +112,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta/$deletedLink\",\"source\":\"ESDelta(100)\","
@@ -142,7 +141,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            +"\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta(100)/$deletedEntity\","
@@ -172,7 +171,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,"
@@ -227,7 +226,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +"\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
          + "\"@odata.id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,"
@@ -257,7 +256,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet2).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +"\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
          + "\"@odata.context\":\"#ESAllPrim/$entity\",\"@odata.id\":\"ESAllPrim(32767)\","
@@ -283,7 +282,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -311,7 +310,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -340,7 +339,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[{"
            + "\"@odata.context\":\"#ESDelta/$link\",\"source\":\"ESDelta(100)\","
@@ -372,7 +371,7 @@ public class JsonDeltaSerializerTest {
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .count(countOption)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\","
            + "\"@odata.count\":\"1\","
@@ -393,7 +392,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":[]"
            + "}";
@@ -416,7 +415,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESWithStream/$delta\","
            + "\"value\":[{\"@odata.context\":\"#ESWithStream/$link\","
@@ -453,7 +452,7 @@ public class JsonDeltaSerializerTest {
                .selectList(helper.buildContextURLSelectList(entityType, null, select))
                .suffix(Suffix.ENTITY).build())
            .select(select).build()).getContent();
-          String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+          String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
     Assertions.assertEquals("{"
         +"\"@odata.context\":\"$metadata#ESDelta(PropertyInt16,PropertyString)/$entity/$delta\","
         + "\"value\":[{\"@odata.id\":\"ESDelta(32767)\",\"PropertyString\":\"Number:32767\"},"
@@ -480,7 +479,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
            + "\"@odata.context\":\"$metadata#ESCollAllPrim/$delta\","
            + "\"value\":[{\"@odata.id\":\"ESCollAllPrim(1)\",\"PropertyInt16\":1,"
@@ -523,7 +522,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"
          +"\"@odata.context\":\"$metadata#ESKeyNav/$delta\","
          + "\"value\":[{\"@odata.id\":\"ESKeyNav(1)\",\"PropertyInt16\":1,"
@@ -595,7 +594,7 @@ public class JsonDeltaSerializerTest {
         EntityCollectionSerializerOptions.with()
         .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).expand(expand)
         .build()).getContent();
-       String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
+       String jsonString = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
        final String expectedResult = "{"         
            +  "\"@odata.context\":\"$metadata#ESDelta/$delta\",\"value\":"
            + "[{\"@odata.id\":\"ESDelta(32767)\",\"PropertyInt16\":32767,\"PropertyString\":"
